# mipt-cpp-course

./: .clang-tidy  CMakeLists.txt  README.md  format-check.sh  hello.cpp
.github/workflows/: CI.yml  clang-tidy-format.yml  linter.yml
tasks/: CMakeLists.txt
tasks/01-sum-product/: sum-product.cpp  sum-product.hpp  tests-sum-product.cpp
tasks/02-stack/: stack.cpp  tests-stack.cpp
tasks/03-string/: string.cpp  tests-string.cpp
tasks/shared_ptr/: smart_pointers.h
tasks/unordered_map/: unordered_map_test.cpp
tasks/variant/: variant_test.cpp
